--- a/public/skills.html
+++ b/public/skills.html
@@ -44,35 +44,43 @@
     <main class="container mx-auto p-6 relative z-10">
         <section class="my-8">
             <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">Technical Skills</h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn">
-                    <img src="path/to/ansible-logo.png" alt="Ansible" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Ansible</span>
-                </div>
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-1s">
-                    <img src="path/to/kubernetes-logo.png" alt="Kubernetes" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Kubernetes</span>
-                </div>
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-2s">
-                    <img src="path/to/terraform-logo.png" alt="Terraform" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Terraform</span>
-                </div>
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-3s">
-                    <img src="path/to/docker-logo.png" alt="Docker" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Docker</span>
-                </div>
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-4s">
-                    <img src="path/to/git-logo.png" alt="Git" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Git</span>
-                </div>
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-5s">
-                    <img src="path/to/azure-logo.png" alt="Azure" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Azure</span>
-                </div>
-                <div class="flex flex-col items-center bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-6s">
-                    <img src="path/to/linux-logo.png" alt="Linux" class="h-16 w-16 mb-2">
-                    <span class="text-gray-100 mt-2">Linux</span>
-                </div>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-4">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/ansible.png" alt="Ansible" class="h-12 mb-2">
+                <span class="text-sm mt-1">Ansible</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-1s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/kubernetes.png" alt="Kubernetes" class="h-12 mb-2">
+                <span class="text-sm mt-1">Kubernetes</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-2s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/terraform.png" alt="Terraform" class="h-12 mb-2">
+                <span class="text-sm mt-1">Terraform</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-3s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/docker.png" alt="Docker" class="h-12 mb-2">
+                <span class="text-sm mt-1">Docker</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-4s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/git.png" alt="Git" class="h-12 mb-2">
+                <span class="text-sm mt-1">Git</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-5s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/azure.png" alt="Azure" class="h-12 mb-2">
+                <span class="text-sm mt-1">Azure</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-6s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/linux.png" alt="Linux" class="h-12 mb-2">
+                <span class="text-sm mt-1">Linux</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/windows server.png" alt="Windows Server" class="h-12 mb-2">
+                <span class="text-sm mt-1">Windows Server</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/azure devops.png" alt="Azure Devops" class="h-12 mb-2">
+                <span class="text-sm mt-1">Azure DevOps</span>
+              </div>
             </div>
         </section>
     </main>
@@ -95,3 +103,5 @@
         observer.observe(card);
       });
     </script>
+</body>
+</html>
