--- a/public/contact.html
+++ b/public/contact.html
@@ -44,6 +44,14 @@
     <h1 class="text-2xl font-bold animate__animated animate__fadeInLeft">Contact Me</h1>
   </header>
 
+  <div class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+    <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
+    <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
+    <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
+    <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
+    <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
+  </div>
+
   <main class="container mx-auto p-6 relative z-10">
     <section class="mb-12 animate__animated animate__fadeInUp">
       <h2 class="text-xl font-semibold mb-4">Get in Touch</h2>
@@ -101,3 +109,4 @@
     });
   </script>
 </body>
+</html>
