--- a/public/skills.html
+++ b/public/skills.html
@@ -41,6 +41,13 @@
     <header class="bg-blue-600 dark:bg-gray-800 text-white p-4 shadow-lg animate__animated animate__fadeInDown sticky top-0 z-10">
         <h1 class="text-3xl font-bold text-center animate__animated animate__fadeInLeft">My DevOps Skills</h1>
     </header>
+    <div class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+      <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
+      <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
+      <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
+      <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
+      <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
+    </div>
     <main class="container mx-auto p-6 relative z-10">
         <section class="my-8">
             <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">Technical Skills</h2>
@@ -80,6 +87,22 @@
               <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/azure devops.png" alt="Azure Devops" class="h-12 mb-2">
                 <span class="text-sm mt-1">Azure DevOps</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/networking.png" alt="Networking" class="h-12 mb-2">
+                <span class="text-sm mt-1">Networking</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/powershell.png" alt="Powershell" class="h-12 mb-2">
+                <span class="text-sm mt-1">Powershell</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/prometheus.png" alt="Prometheus" class="h-12 mb-2">
+                <span class="text-sm mt-1">Prometheus</span>
+              </div>
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/grafana.png" alt="Grafana" class="h-12 mb-2">
+                <span class="text-sm mt-1">Grafana</span>
               </div>
             </div>
         </section>
