--- a/public/certifications.html
+++ b/public/certifications.html
@@ -44,6 +44,14 @@
     <h1 class="text-3xl font-bold animate__animated animate__fadeInLeft">Certifications</h1>
   </header>
 
+  <div class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+    <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
+    <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
+    <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
+    <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
+    <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
+  </div>
+
   <main class="p-6 relative z-10">
     <section id="certifications" class="mb-8">
       <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">My Certifications</h2>
@@ -88,3 +96,5 @@
       observer.observe(card);
     });
   </script>
+</body>
+</html>
