--- a/public/projects.html
+++ b/public/projects.html
@@ -41,6 +41,13 @@
     <header class="bg-blue-600 dark:bg-gray-800 p-4 text-white shadow-lg animate__animated animate__fadeInDown sticky top-0 z-10">
         <h1 class="text-3xl font-bold animate__animated animate__fadeInLeft">My DevOps Projects</h1>
     </header>
+    <nav class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+      <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
+      <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
+      <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
+      <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
+      <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
+    </nav>
     <main class="container mx-auto p-4 relative z-10">
         <section class="my-8">
             <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">Projects</h2>
