--- a/public/projects.html
+++ b/public/projects.html
@@ -53,34 +53,29 @@
             <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp">
-                    <h3 class="text-xl font-bold text-blue-300">Project Title 1</h3>
-                    <p class="mt-2">Description of Project 1. This project involves...</p>
+                    <h3 class="text-xl font-bold text-blue-300">AKS Cluster Infrastructure Deployment on Azure using Terraform</h3>
+                    <p class="mt-2">This project provisions an Azure Kubernetes Service (AKS) cluster using Terraform. It automates the creation of necessary infrastructure components like the Resource Group, AKS Cluster, Service Principal, Key Vault, and Role Assignments — ensuring a fully automated and secure deployment process.</p>
                     <div class="flex flex-wrap gap-2 mt-3">
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool1</span>
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool2</span>
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool3</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Terraform</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Azure</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Azure Kubernetes Service</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Azure CLI</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Git</span>
                     </div>
-                    <a href="https://github.com/username/project1" target="_blank" class="inline-block mt-4 text-blue-400 hover:underline transition-colors duration-300">View on GitHub</a>
+                    <a href="https://github.com/TanmayaChoudhury/AKS-Cluster-Terraform.git" target="_blank" class="inline-block mt-4 text-blue-400 hover:underline transition-colors duration-300">View on GitHub</a>
                 </div>
                 <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-1s">
-                    <h3 class="text-xl font-bold text-blue-300">Project Title 2</h3>
-                    <p class="mt-2">Description of Project 2. This project focuses on...</p>
+                    <h3 class="text-xl font-bold text-blue-300">AWX Deployment Using AWX Operator and Helm</h3>
+                    <p class="mt-2">This project demonstrates deploying AWX (Ansible Web eXecutable) on a Kubernetes cluster using the AWX Operator Helm chart. AWX is an open-source web-based UI for managing Ansible automation.</p>
                     <div class="flex flex-wrap gap-2 mt-3">
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool1</span>
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool2</span>
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool3</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Kubernetes</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Ansible</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">AWX</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Helm</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Docker</span>
+                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Git</span>
                     </div>
-                    <a href="https://github.com/username/project2" target="_blank" class="inline-block mt-4 text-blue-400 hover:underline transition-colors duration-300">View on GitHub</a>
-                </div>
-                <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-2s">
-                    <h3 class="text-xl font-bold text-blue-300">Project Title 3</h3>
-                    <p class="mt-2">Description of Project 3. This project showcases...</p>
-                    <div class="flex flex-wrap gap-2 mt-3">
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool1</span>
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool2</span>
-                        <span class="bg-blue-700 text-xs px-2 py-1 rounded">Tool3</span>
-                    </div>
-                    <a href="https://github.com/username/project3" target="_blank" class="inline-block mt-4 text-blue-400 hover:underline transition-colors duration-300">View on GitHub</a>
+                    <a href="https://github.com/TanmayaChoudhury/AWX-Deployment.git" target="_blank" class="inline-block mt-4 text-blue-400 hover:underline transition-colors duration-300">View on GitHub</a>
                 </div>
                 <!-- Add more projects as needed, copy the card above and increment animate__delay-Xs for staggered animation -->
             </div>
