Made Animations Smooth

--- a/public/certifications.html
+++ b/public/certifications.html
@@ -57,19 +57,19 @@
       <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">My Certifications</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp">
-          <img src="path/to/certification-logo-1.png" alt="Certification 1" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
-          <h3 class="text-xl font-bold text-blue-300">Certification Title 1</h3>
-          <p class="text-gray-300">Issuing Organization</p>
+          <img src="images/az900.png" alt="Certification 1" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
+          <h3 class="text-xl font-bold text-blue-300">Microsoft Certified: Azure Fundamentals</h3>
+          <p class="text-gray-300">Microsoft</p>
         </div>
         <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-1s">
-          <img src="path/to/certification-logo-2.png" alt="Certification 2" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
-          <h3 class="text-xl font-bold text-blue-300">Certification Title 2</h3>
-          <p class="text-gray-300">Issuing Organization</p>
+          <img src="images/az104.png" alt="Certification 2" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
+          <h3 class="text-xl font-bold text-blue-300">Microsoft Certified: Azure Administrator Associate</h3>
+          <p class="text-gray-300">Microsoft</p>
         </div>
         <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-2s">
-          <img src="path/to/certification-logo-3.png" alt="Certification 3" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
-          <h3 class="text-xl font-bold text-blue-300">Certification Title 3</h3>
-          <p class="text-gray-300">Issuing Organization</p>
+          <img src="images/terraformca.png" alt="Certification 3" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
+          <h3 class="text-xl font-bold text-blue-300">HashiCorp Certified: Terraform Associate</h3>
+          <p class="text-gray-300">HashiCorp</p>
         </div>
         <!-- Add more certifications as needed, increment animate__delay-Xs for staggered animation -->
       </div>
