Made Animations Smooth

--- a/public/skills.html
+++ b/public/skills.html
@@ -39,7 +39,7 @@
 <body class="dark bg-gradient-to-br from-gray-900 via-gray-800 to-blue-900 text-gray-100 relative overflow-x-hidden">
     <div class="bg-watermark"></div>
     <header class="bg-blue-600 dark:bg-gray-800 text-white p-4 shadow-lg animate__animated animate__fadeInDown sticky top-0 z-10">
-        <h1 class="text-3xl font-bold text-center animate__animated animate__fadeInLeft">My DevOps Skills</h1>
+        <h1 class="text-3xl font-bold animate__animated animate__fadeInLeft">My DevOps Skills</h1>
     </header>
     <div class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
       <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
