--- a/public/skills.html
+++ b/public/skills.html
@@ -56,51 +56,51 @@
                 <img src="images/ansible.png" alt="Ansible" class="h-12 mb-2">
                 <span class="text-sm mt-1">Ansible</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-1s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/kubernetes.png" alt="Kubernetes" class="h-12 mb-2">
                 <span class="text-sm mt-1">Kubernetes</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-2s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/terraform.png" alt="Terraform" class="h-12 mb-2">
                 <span class="text-sm mt-1">Terraform</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-3s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/docker.png" alt="Docker" class="h-12 mb-2">
                 <span class="text-sm mt-1">Docker</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-4s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/git.png" alt="Git" class="h-12 mb-2">
                 <span class="text-sm mt-1">Git</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-5s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/azure.png" alt="Azure" class="h-12 mb-2">
                 <span class="text-sm mt-1">Azure</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-6s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/linux.png" alt="Linux" class="h-12 mb-2">
                 <span class="text-sm mt-1">Linux</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-7s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/windows server.png" alt="Windows Server" class="h-12 mb-2">
                 <span class="text-sm mt-1">Windows Server</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-8s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/azure devops.png" alt="Azure Devops" class="h-12 mb-2">
                 <span class="text-sm mt-1">Azure DevOps</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-9s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/networking.png" alt="Networking" class="h-12 mb-2">
                 <span class="text-sm mt-1">Networking</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-10s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/powershell.png" alt="Powershell" class="h-12 mb-2">
                 <span class="text-sm mt-1">Powershell</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-11s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/prometheus.png" alt="Prometheus" class="h-12 mb-2">
                 <span class="text-sm mt-1">Prometheus</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn animate__delay-12s" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
                 <img src="images/grafana.png" alt="Grafana" class="h-12 mb-2">
                 <span class="text-sm mt-1">Grafana</span>
               </div>
