--- a/public/certifications.html
+++ b/public/certifications.html
@@ -14,11 +14,17 @@
       pointer-events: none;
       z-index: 0;
       opacity: 0.07;
-      background: url('path/to/kubernetes-logo.png') 10% 20%/120px no-repeat,
-                  url('path/to/docker-logo.png') 80% 60%/100px no-repeat,
-                  url('path/to/ansible-logo.png') 60% 10%/90px no-repeat,
-                  url('path/to/terraform-logo.png') 30% 70%/110px no-repeat;
+      background: url('images/kubernetes.png') 10% 20%/120px no-repeat,
+                  url('images/docker.png') 80% 60%/100px no-repeat,
+                  url('images/ansible.png') 60% 10%/90px no-repeat,
+                  url('images/terraform.png') 30% 70%/110px no-repeat;
       filter: blur(1px);
+    }
+    @media (max-width: 640px) {
+      .bg-watermark {
+        background-size: 60px, 45px, 55px, 50px;
+        background-position: 5% 10%, 70% 5%, 20% 60%, 60% 80%;
+      }
     }
     html, body {
       height: 100%;
@@ -44,29 +50,29 @@
     <h1 class="text-3xl font-bold animate__animated animate__fadeInLeft">Certifications</h1>
   </header>
 
-  <div class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+  <nav class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex flex-col sm:flex-row justify-center items-center space-y-2 sm:space-y-0 sm:space-x-6 shadow-lg z-10">
     <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
     <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
     <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
     <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
     <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
-  </div>
+  </nav>
 
-  <main class="p-6 relative z-10">
+  <main class="p-4 sm:p-6 relative z-10">
     <section id="certifications" class="mb-8">
       <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">My Certifications</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-8">
+        <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp w-full">
           <img src="images/az900.png" alt="Certification 1" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
           <h3 class="text-xl font-bold text-blue-300">Microsoft Certified: Azure Fundamentals</h3>
           <p class="text-gray-300">Microsoft</p>
         </div>
-        <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-1s">
+        <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-1s w-full">
           <img src="images/az104.png" alt="Certification 2" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
           <h3 class="text-xl font-bold text-blue-300">Microsoft Certified: Azure Administrator Associate</h3>
           <p class="text-gray-300">Microsoft</p>
         </div>
-        <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-2s">
+        <div class="bg-white bg-opacity-10 p-6 rounded-2xl shadow-xl text-gray-100 transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-2s w-full">
           <img src="images/terraformca.png" alt="Certification 3" class="w-full h-32 object-contain mb-4 rounded bg-white bg-opacity-20 p-2">
           <h3 class="text-xl font-bold text-blue-300">HashiCorp Certified: Terraform Associate</h3>
           <p class="text-gray-300">HashiCorp</p>
