--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,13 @@
                   url('images/terraform') 30% 70%/110px no-repeat;
       filter: blur(1px);
     }
+    /* Responsive tweaks for watermark */
+    @media (max-width: 640px) {
+      .bg-watermark {
+        background-size: 60px, 45px, 55px;
+        background-position: 5% 10%, 70% 5%, 20% 60%;
+      }
+    }
   </style>
 </head>
 <body class="dark bg-gradient-to-br from-gray-900 via-gray-800 to-blue-900 text-gray-100 transition-colors duration-500 relative overflow-x-hidden">
@@ -35,16 +42,18 @@
   <div class="bg-watermark"></div>
 
   <header id="main-header" class="bg-blue-600 dark:bg-gray-800 p-4 text-white shadow-lg transition-colors duration-500 sticky top-0 z-10 animate__animated animate__fadeInDown">
-    <h1 class="text-3xl font-bold tracking-tight animate__animated animate__fadeInLeft">DevOps Portfolio</h1>
-    <nav class="mt-2">
-      <ul class="flex space-x-4">
-        <li><a href="index.html" class="hover:underline transition-colors duration-300">Home</a></li>
-        <li><a href="projects.html" class="hover:underline transition-colors duration-300">Projects</a></li>
-        <li><a href="skills.html" class="hover:underline transition-colors duration-300">Skills</a></li>
-        <li><a href="certifications.html" class="hover:underline transition-colors duration-300">Certifications</a></li>
-        <li><a href="contact.html" class="hover:underline transition-colors duration-300">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between">
+      <h1 class="text-3xl font-bold tracking-tight animate__animated animate__fadeInLeft">DevOps Portfolio</h1>
+      <nav class="mt-2 sm:mt-0">
+        <ul class="flex flex-col sm:flex-row gap-2 sm:gap-4">
+          <li><a href="index.html" class="hover:underline transition-colors duration-300">Home</a></li>
+          <li><a href="projects.html" class="hover:underline transition-colors duration-300">Projects</a></li>
+          <li><a href="skills.html" class="hover:underline transition-colors duration-300">Skills</a></li>
+          <li><a href="certifications.html" class="hover:underline transition-colors duration-300">Certifications</a></li>
+          <li><a href="contact.html" class="hover:underline transition-colors duration-300">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <script>
     // Fade out header on scroll (fix for sticky header)
@@ -58,9 +67,9 @@
       header.style.transition = 'opacity 0.3s cubic-bezier(0.4,0,0.2,1)';
       // Also hide visually when fully transparent to avoid sticky space
       if (opacity < 0.05) {
-        header.style.visibility = 'hidden';
+        header.style.display = 'none';
       } else {
-        header.style.visibility = 'visible';
+        header.style.display = '';
       }
     });
   </script>
@@ -181,7 +190,7 @@
           <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 .5C5.73.5.5 5.73.5 12c0 5.08 3.29 9.39 7.86 10.91.58.11.79-.25.79-.56v-2.01c-3.2.7-3.87-1.54-3.87-1.54-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.11-.75.41-1.27.75-1.56-2.56-.29-5.26-1.28-5.26-5.7 0-1.26.45-2.29 1.19-3.09-.12-.29-.52-1.46.11-3.04 0 0 .97-.31 3.18 1.18a11.1 11.1 0 012.9-.39c.98.01 1.97.13 2.9.39 2.2-1.49 3.17-1.18 3.17-1.18.63 1.58.23 2.75.11 3.04.74.8 1.19 1.83 1.19 3.09 0 4.43-2.7 5.41-5.27 5.7.42.36.8 1.09.8 2.2v3.26c0 .31.21.67.8.56C20.71 21.39 24 17.08 24 12c0-6.27-5.23-11.5-12-11.5z"/></svg>
           GitHub
         </a>
-        <a href="www.linkedin.com/in/tanmaya-choudhury-25b110300" target="_blank" class="flex items-center gap-2 text-blue-400 hover:text-blue-300 transition-colors duration-300 animate__animated animate__fadeInUp animate__delay-2s">
+        <a href="https://www.linkedin.com/in/tanmaya-choudhury-25b110300" target="_blank" class="flex items-center gap-2 text-blue-400 hover:text-blue-300 transition-colors duration-300 animate__animated animate__fadeInUp animate__delay-2s">
           <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h3v1.27c.42-.81 1.45-1.27 2.73-1.27 3 0 3.57 1.97 3.57 4.54v5.46z"/></svg>
           LinkedIn
         </a>
