--- a/public/projects.html
+++ b/public/projects.html
@@ -14,11 +14,17 @@
         pointer-events: none;
         z-index: 0;
         opacity: 0.07;
-        background: url('path/to/kubernetes-logo.png') 10% 20%/120px no-repeat,
-                    url('path/to/docker-logo.png') 80% 60%/100px no-repeat,
-                    url('path/to/ansible-logo.png') 60% 10%/90px no-repeat,
-                    url('path/to/terraform-logo.png') 30% 70%/110px no-repeat;
+        background: url('images/kubernetes.png') 10% 20%/120px no-repeat,
+                    url('images/docker.png') 80% 60%/100px no-repeat,
+                    url('images/ansible.png') 60% 10%/90px no-repeat,
+                    url('images/terraform.png') 30% 70%/110px no-repeat;
         filter: blur(1px);
+      }
+      @media (max-width: 640px) {
+        .bg-watermark {
+          background-size: 60px, 45px, 55px, 50px;
+          background-position: 5% 10%, 70% 5%, 20% 60%, 60% 80%;
+        }
       }
       html, body {
         height: 100%;
@@ -41,18 +47,18 @@
     <header class="bg-blue-600 dark:bg-gray-800 p-4 text-white shadow-lg animate__animated animate__fadeInDown sticky top-0 z-10">
         <h1 class="text-3xl font-bold animate__animated animate__fadeInLeft">My DevOps Projects</h1>
     </header>
-    <nav class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+    <nav class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex flex-col sm:flex-row justify-center items-center space-y-2 sm:space-y-0 sm:space-x-6 shadow-lg z-10">
       <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
       <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
       <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
       <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
       <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
     </nav>
-    <main class="container mx-auto p-4 relative z-10">
+    <main class="container mx-auto p-4 sm:p-6 relative z-10">
         <section class="my-8">
             <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-8">
+                <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp w-full">
                     <h3 class="text-xl font-bold text-blue-300">AKS Cluster Infrastructure Deployment on Azure using Terraform</h3>
                     <p class="mt-2">This project provisions an Azure Kubernetes Service (AKS) cluster using Terraform. It automates the creation of necessary infrastructure components like the Resource Group, AKS Cluster, Service Principal, Key Vault, and Role Assignments — ensuring a fully automated and secure deployment process.</p>
                     <div class="flex flex-wrap gap-2 mt-3">
@@ -64,7 +70,7 @@
                     </div>
                     <a href="https://github.com/TanmayaChoudhury/AKS-Cluster-Terraform.git" target="_blank" class="inline-block mt-4 text-blue-400 hover:underline transition-colors duration-300">View on GitHub</a>
                 </div>
-                <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-1s">
+                <div class="bg-gray-800 bg-opacity-90 p-6 rounded-2xl shadow-xl transform transition-transform duration-300 hover:scale-105 animate__animated animate__fadeInUp animate__delay-1s w-full">
                     <h3 class="text-xl font-bold text-blue-300">AWX Deployment Using AWX Operator and Helm</h3>
                     <p class="mt-2">This project demonstrates deploying AWX (Ansible Web eXecutable) on a Kubernetes cluster using the AWX Operator Helm chart. AWX is an open-source web-based UI for managing Ansible automation.</p>
                     <div class="flex flex-wrap gap-2 mt-3">
@@ -94,7 +100,6 @@
           }
         });
       }, { threshold: 0.15 });
-
       document.querySelectorAll('.grid > div').forEach(card => {
         card.classList.add('opacity-0');
         observer.observe(card);
