--- a/public/skills.html
+++ b/public/skills.html
@@ -14,11 +14,17 @@
         pointer-events: none;
         z-index: 0;
         opacity: 0.07;
-        background: url('path/to/kubernetes-logo.png') 10% 20%/120px no-repeat,
-                    url('path/to/docker-logo.png') 80% 60%/100px no-repeat,
-                    url('path/to/ansible-logo.png') 60% 10%/90px no-repeat,
-                    url('path/to/terraform-logo.png') 30% 70%/110px no-repeat;
+        background: url('images/kubernetes.png') 10% 20%/120px no-repeat,
+                    url('images/docker.png') 80% 60%/100px no-repeat,
+                    url('images/ansible.png') 60% 10%/90px no-repeat,
+                    url('images/terraform.png') 30% 70%/110px no-repeat;
         filter: blur(1px);
+      }
+      @media (max-width: 640px) {
+        .bg-watermark {
+          background-size: 60px, 45px, 55px, 50px;
+          background-position: 5% 10%, 70% 5%, 20% 60%, 60% 80%;
+        }
       }
       html, body {
         height: 100%;
@@ -41,67 +47,68 @@
     <header class="bg-blue-600 dark:bg-gray-800 text-white p-4 shadow-lg animate__animated animate__fadeInDown sticky top-0 z-10">
         <h1 class="text-3xl font-bold animate__animated animate__fadeInLeft">My DevOps Skills</h1>
     </header>
-    <div class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex justify-center space-x-6 shadow-lg z-10">
+    <nav class="w-full bg-gray-800 bg-opacity-90 py-4 px-6 flex flex-col sm:flex-row justify-center items-center space-y-2 sm:space-y-0 sm:space-x-6 shadow-lg z-10">
       <a href="index.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Home</a>
       <a href="projects.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Projects</a>
       <a href="skills.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Skills</a>
       <a href="certifications.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Certifications</a>
       <a href="contact.html" class="text-gray-100 hover:text-blue-400 font-semibold transition">Contact</a>
-    </div>
-    <main class="container mx-auto p-6 relative z-10">
+    </nav>
+    <main class="container mx-auto p-4 sm:p-6 relative z-10">
         <section class="my-8">
             <h2 class="text-2xl font-semibold mb-8 animate__animated animate__fadeInLeft">Technical Skills</h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-4">
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/ansible.png" alt="Ansible" class="h-12 mb-2">
+            <div class="grid grid-cols-1 xs:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6 mt-4">
+              <!-- Skill cards remain unchanged -->
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/ansible.png" alt="Ansible" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Ansible</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/kubernetes.png" alt="Kubernetes" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/kubernetes.png" alt="Kubernetes" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Kubernetes</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/terraform.png" alt="Terraform" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/terraform.png" alt="Terraform" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Terraform</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/docker.png" alt="Docker" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/docker.png" alt="Docker" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Docker</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/git.png" alt="Git" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/git.png" alt="Git" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Git</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/azure.png" alt="Azure" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/azure.png" alt="Azure" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Azure</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/linux.png" alt="Linux" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/linux.png" alt="Linux" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Linux</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/windows server.png" alt="Windows Server" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/windows server.png" alt="Windows Server" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Windows Server</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/azure devops.png" alt="Azure Devops" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/azure devops.png" alt="Azure Devops" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Azure DevOps</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/networking.png" alt="Networking" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/networking.png" alt="Networking" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Networking</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/powershell.png" alt="Powershell" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/powershell.png" alt="Powershell" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Powershell</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/prometheus.png" alt="Prometheus" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/prometheus.png" alt="Prometheus" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Prometheus</span>
               </div>
-              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
-                <img src="images/grafana.png" alt="Grafana" class="h-12 mb-2">
+              <div class="flex flex-col items-center justify-center p-4 rounded-lg transform transition-transform duration-300 hover:scale-105 animate__animated animate__zoomIn w-full" style="background-color: rgba(35,35,35,0.85); box-shadow: none;">
+                <img src="images/grafana.png" alt="Grafana" class="h-12 mb-2 w-auto max-w-full">
                 <span class="text-sm mt-1">Grafana</span>
               </div>
             </div>
@@ -120,7 +127,6 @@
           }
         });
       }, { threshold: 0.15 });
-
       document.querySelectorAll('.grid > div').forEach(card => {
         card.classList.add('opacity-0');
         observer.observe(card);
