Made Animations Smooth

--- a/public/projects.html
+++ b/public/projects.html
@@ -88,7 +88,7 @@
         </section>
     </main>
     <footer class="bg-blue-600 dark:bg-gray-800 p-4 text-white text-center shadow-lg animate__animated animate__fadeInUp">
-        <p>&copy; 2023 My DevOps Portfolio</p>
+        <p>&copy; 2025 Tanmaya Choudhury. All rights reserved.</p>
     </footer>
     <script>
       // Reveal project cards on scroll
