--- a/public/skills.html
+++ b/public/skills.html
@@ -115,7 +115,7 @@
         </section>
     </main>
     <footer class="bg-blue-600 dark:bg-gray-800 text-white p-4 text-center shadow-lg animate__animated animate__fadeInUp">
-        <p>&copy; 2023 My DevOps Portfolio</p>
+        <p>&copy; 2025 Tanmaya Choudhury. All rights reserved.</p>
     </footer>
     <script>
       // Reveal skill cards on scroll
