--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
       <p class="mt-4 max-w-2xl text-lg animate__animated animate__fadeInUp animate__delay-2s">
         I am a DevOps engineer with a passion for automation, cloud, and CI/CD. Explore my projects, skills, and certifications below.
       </p>
-      <a href="Tanmaya_Choudhury_Resume.pdf" download class="inline-block mt-6 px-6 py-2 bg-blue-500 hover:bg-blue-400 text-white rounded shadow transition transform hover:scale-105 animate__animated animate__fadeInUp animate__delay-3s">Download Resume</a>
+      <a href="Tanmaya_Choudhury_Resume.pdf" target="_blank" class="inline-block mt-6 px-6 py-2 bg-blue-500 hover:bg-blue-400 text-white rounded shadow transition transform hover:scale-105 animate__animated animate__fadeInUp animate__delay-3s">View Resume</a>
     </section>
 
     <section id="skills" class="mb-12 animate-fadeIn">
